# sync-my-workspace

./: README.md  sync-my-workspace.cabal
src/: SyncMyWorkspace.hs
src/SyncMyWorkspace/: Versioning.hs
test/: Spec.hs
test/SyncMyWorkspace/Tests/: Versioning.hs
