name:                sync-my-workspace
version:             0.1.0.0
synopsis:            Keep your personal configurations safe.
description:         Please see README.md
homepage:            https://github.com/githubuser/sync-my-workspace#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SyncMyWorkspace
                     , SyncMyWorkspace.Versioning
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable smw
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sync-my-workspace
  default-language:    Haskell2010

test-suite sync-my-workspace-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sync-my-workspace
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sync-my-workspace
